syntax = "proto3";

package com.zynga.runtime.protobuf;

option java_package = "com.zynga.protobuf";
option java_outer_classname = "EventSource";
option csharp_namespace = "Zynga.Protobuf.Runtime.EventSource";

enum ListAction {
  UNKNOWN_LIST = 0;
  ADD_LIST = 1;
  REMOVE_LIST = 2;
  REMOVE_AT_LIST = 3;
  REPLACE_LIST = 4;
  INSERT_LIST = 5;
  CLEAR_LIST = 6;
  UPDATE_LIST = 7;
}

message ListEvent {
  ListAction   list_action = 1;
  int32        index       = 2;
  EventContent content     = 3;
  EventData    event_data  = 4; // only used by update action
}

enum MapAction {
  UNKNOWN_MAP = 0;
  ADD_MAP = 1;
  REMOVE_MAP = 2;
  REPLACE_MAP = 3;
  CLEAR_MAP = 4;
  UPDATE_MAP = 5;
}

message MapEvent {
  MapAction map_action = 1;
  MapKey    key = 2;
  bytes     key_value  = 3;
  EventData event_data = 4; // only used by update action
}

message EventSourceRoot {
  repeated EventData events = 1;
}

message EventData {
  repeated int32 path       = 1;
  oneof action {
    EventContent set        = 2;
    MapEvent     map_event  = 3;
    ListEvent    list_event = 4;
  }
}

message EventContent {
  oneof data {
    uint32      u_32        = 1;
    int32       i_32        = 2;
    fixed64     f_64        = 3;
    fixed32     f_32        = 4;
    sfixed64    s_f_64      = 5;
    sfixed32    s_f_32      = 6;
    double      r_64        = 7;
    float       r_32        = 8;
    bool        bool_data   = 9;
    string      string_data = 10;
    bytes       byte_data   = 11;
    int64       i_64        = 12;
    uint64      u_64        = 13;
    sint32      s_i_32      = 14;
    sint64      s_i_64      = 15;
  }
}

message MapKey {
  oneof data {
    uint32      u_32        = 1;
    int32       i_32        = 2;
    fixed64     f_64        = 3;
    fixed32     f_32        = 4;
    sfixed64    s_f_64      = 5;
    sfixed32    s_f_32      = 6;
    bool        bool_data   = 9;
    string      string_data = 10;
    int64       i_64        = 12;
    uint64      u_64        = 13;
    sint32      s_i_32      = 14;
    sint64      s_i_64      = 15;
  }
}
